# novo-scanner

./: .gitignore  AGENTS.md  CLAUDE.md  Exchanges DOCS.md
.claude/: settings.local.json
.tmp/: agent_dataset_audit_phd_1.md  agent_dataset_audit_phd_2.md  analyze_dataset.py  audit_acc_lbl.py  check_anomalies.py  monitor-long-collect.ps1  preflight_opportunities.json  scanner_collect_24h_metrics_005m.prom  scanner_collect_24h_metrics_bootstrap.prom  scanner_collect_30m_metrics_final.prom  scanner_collect_30m_metrics_pres_shutdown.prom  scanner_collect_audit_60m.json  scanner_collect_final_metrics.txt  scanner_collect_final_status.json  scanner_collect_session.json  scanner_collect_started_at.txt  scanner_collect_status_debug.json  show_2cda935_label_resolver.diff  show_be0b275_label_resolver.diff  smoke-v8-config.toml  smoke-v8-long-config.toml  smoke-v8-metrics-latest.txt  spa_server.py
docs/ml/: README.md
plans/: ml_stack_research_prompt.md
scanner/: Cargo.toml  README.md  config.example.toml
scanner/scripts/: explode_label_floor_hits.py
scanner/src/: config.rs  error.rs  exchange_connectivity.rs  lib.rs  main.rs  normalize.rs  types.rs
scanner/src/adapter/: binance_fut.rs  binance_spot.rs  bingx_fut.rs  bingx_spot.rs  bitget.rs  bitget_fut.rs  gate_fut.rs  gate_spot.rs  kucoin.rs  kucoin_fut.rs  mexc_fut.rs  mexc_spot.rs  mexc_spot_rest.rs  mod.rs  reconnect.rs  vol_poller.rs  xt_fut.rs  xt_spot.rs
scanner/src/book/: depth.rs  mod.rs  seqlock.rs  store.rs
scanner/src/broadcast/: contract.rs  history.rs  mod.rs  server.rs
scanner/src/decode/: gzip.rs  json_path.rs  mod.rs
scanner/src/discovery/: binance.rs  bingx.rs  bitget.rs  gate.rs  kucoin.rs  mexc.rs  mod.rs  orchestrator.rs  xt.rs
scanner/src/ml/: broadcast.rs  contract.rs  dto.rs  economic.rs  listing_history.rs  metrics.rs  mod.rs  retention.rs  serving.rs  trigger.rs  util.rs
scanner/src/ml/baseline/: ecdf.rs  mod.rs
scanner/src/ml/eval/: invariants.rs  leakage.rs  lovo.rs  mod.rs
scanner/src/ml/feature_store/: hot_cache.rs  mod.rs
scanner/src/ml/persistence/: label_resolver.rs  labeled_trade.rs  labeled_writer.rs  mod.rs  parquet_compactor.rs  raw_sample.rs  raw_writer.rs  route_ranking.rs  run_audit.rs  sample.rs  sample_id.rs  storage_v2.rs  writer.rs
scanner/src/ml/training/: estimator_only.rs  mod.rs
scanner/src/obs/: mod.rs
scanner/src/spread/: engine.rs  mod.rs  staleness.rs
scanner/tests/: http_smoke.rs  ml_storage_v2_shadow.rs
(+179 files in other folders)
